php-src/ext/spl/tests/bug70155.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Fatal error: Uncaught InvalidArgumentException: Overloaded object of type DateInterval is not compatible with ArrayObject in /root/php-src/ext/spl/tests/bug70155.php:4
Stack trace:
#0 [internal function]: ArrayObject->unserialize('x:i:0;O:12:"Dat...')
#1 /root/php-src/ext/spl/tests/bug70155.php(4): unserialize('C:11:"ArrayObje...')
#2 {main}
  thrown in /root/php-src/ext/spl/tests/bug70155.php on line 4